--- a/grpc-demo-helm/values.yaml
+++ b/grpc-demo-helm/values.yaml
@@ -1,4 +1,4 @@
-# Default values for my-grpc-app.
+# Default values for grpc-demo-helm.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
