add image pull secret

--- a/inference-server-ubuntu/templates/grpc-deployment.yaml
+++ b/inference-server-ubuntu/templates/grpc-deployment.yaml
@@ -33,3 +33,5 @@ spec:
           hostPath:
             path: /mounttest-minikube
             type: Directory
+      imagePullSecrets:
+        - name: ecr-secret
