--- a/inference-server-ubuntu/templates/grpc-deployment.yaml
+++ b/inference-server-ubuntu/templates/grpc-deployment.yaml
@@ -31,7 +31,7 @@ spec:
       volumes:
         - name: model-volume
           hostPath:
-            path: /home/ubuntu/WF-inference-server/dependencies
+            path: "/home/ubuntu/WF-inference-server/dependencies"
             type: Directory
       imagePullSecrets:
         - name: ecr-secret
